Closed
Bug 91547
Opened 24 years ago
Closed 24 years ago
Active Accessibility: Bounds for textfields in combobox gets reported wrong in accessibility
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mozilla, Assigned: mozilla)
References
Details
(Keywords: access)
Attachments
(3 files)
|
2.60 KB,
patch
|
Details | Diff | Splinter Review | |
|
6.11 KB,
patch
|
Details | Diff | Splinter Review | |
|
6.98 KB,
patch
|
Details | Diff | Splinter Review |
Using the inspect object tool from the msaa sdk. Set the tool to show the focus
with a highlight ring and mark off the select with mouse. navigate in the
mfcembed app ( not sure if it shows up on mozilla but I suspect it does ) to a
combobox. Use the navigation on the inspect tool to go into the children of the
combox and see that the focus ring for the textfield ( and the button actually )
get shown in the wrong place. About half a screen up and slightly to the left.
Expected behavior is obviously to show around the textfield and button
themselves. :-)
In going through the code and talking with a couple people it seems that we are
not using the correct offset to locate the absolute screen position.
| Assignee | ||
Updated•24 years ago
|
| Assignee | ||
Comment 1•24 years ago
|
||
Comment 2•24 years ago
|
||
Please change the variable name from aRelativeFrame to aBoundingFrame
(I know this might be used in some other places, but in the last sr= we were
asked to use the variable name aBoundingFrame to make it easier to understand).
Also, I think we should use assertions at some point, rather than #ifdef DEBUG
and return. At least that way we find out about it during a debug build, instead
of a quiet failure.
r=aaronl
| Assignee | ||
Updated•24 years ago
|
Whiteboard: needs r=/sr= → needs sr=
| Assignee | ||
Comment 3•24 years ago
|
||
Comment 4•24 years ago
|
||
rs=waterson
| Assignee | ||
Comment 5•24 years ago
|
||
| Assignee | ||
Comment 6•24 years ago
|
||
whoops, posted diff to wrong bug. John needs more sleep.
diff v1.1 was checked into the tree yesterday (Wed. 8/1/1).
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 7•24 years ago
|
||
May God have mercy on us all. The 212 bug spam-o-rama is Now!
QA Contact: aegis → jrgm
Updated•24 years ago
|
Keywords: fcc508
Summary: Bounds for textfields in combobox gets reported wrong in accessibility → Active Accessibility: Bounds for textfields in combobox gets reported wrong in accessibility
You need to log in
before you can comment on or make changes to this bug.
Description
•