Fix for bug 91547 r=aaronl rs=waterson fix reporting of bounds in accessibility